style dosyasına ekleme yapıldı

--- a/index.html
+++ b/index.html
@@ -12,14 +12,90 @@
       <button id="header-button">Giriş Yap</button>
     </header>
     <section id="section1">
-        <h2>Kişisel bilgilerinizin nerede ele geçirildiğini öğrenin</h2>
-        <p>Verilerinizin sızdırılıp sızdırılmadığını görmek için veri ihlallerini tarıyor ve bunları düzeltmeniz için gereken adımları söylüyoruz.</p>
-        <button></button>
-        <button>Ücretsiz taramayı başlat</button>
-        <p>Veri ihlali risklerini kontrol etmek için e-posta adresinizi yazın.</p>
-        <img src="" alt="">
-
+      <div>
+        <h1>Kişisel bilgilerinizin nerede ele geçirildiğini öğrenin</h1>
+        <p>
+          Verilerinizin sızdırılıp sızdırılmadığını görmek için veri ihlallerini
+          tarıyor ve bunları düzeltmeniz için gereken adımları söylüyoruz.
+        </p>
         
+        <form id="input" class="header-buton">
+          <input type="email" placeholder="kullanici@example.com">
+        </form>
+        <button id="buton2" class="header-buton">Ücretsiz taramayı başlat</button>
+        <p>
+          Veri ihlali risklerini kontrol etmek için e-posta adresinizi yazın.
+        </p>
+      </div>
+      <div>
+        <img src="images/mobiledevice.PNG" alt="" />
+      </div>
     </section>
+    <section id="section2">
+        <h2>11 dakikada bir yeni bir veri ihlali yaşanıyor ve kişisel bilgileriniz ele geçiriliyor; ama merak etmeyin, biz yanınızdayız.</h2>
+    </section>
+    <section id="section3">
+      <div>
+        <h3>Veri ihlallerini çözmenize yardımcı oluyoruz</h3>
+        <p>Misyonumuz, kişisel verilerinizin kontrolünü size geri vermek. Veri ihlallerini çözmenize ve bilgilerinizi gizli tutmanıza yardımcı oluyoruz. Bunu yaparken de <a href="">gizliliğinize saygı gösteriyoruz.</a>
+          <form action=""><input type="email" placeholder="kullanici@example.com"></form>
+          <button>Ücretsiz Taramayı Başlat</button>
+      </div>
+      <img src="" alt="">
+    </section>
+    <section id="section4">
+      <img src="" alt="">
+      <div>
+        <h3>Hangi bilgilerim risk altında olabilir?</h3>
+        <p>Veri sızıntıları maalesef dijital hayatımızın bir parçası. Ancak parolalarınızın, iletişim bilgilerinizin, finansal bilgilerinizin ve diğer kişisel bilgilerinizin ele geçirilmesi sizi kimlik hırsızlığı riskiyle baş başa bırakabilir.</p>
+        <form action="">
+          <input type="email">
+        </form>
+        <button>Ücretsiz Taramayı Başlat</button>
+      </div>
+    </section>
+    <section id="section5">
+      <h3></h3>
+      <form action=""><input type="email" name="" id="" placeholder="kullanici@example.com"></form>
+      <button>Ücretsiz Taramayı Başlat</button>
+    </section>
+    <section id="section6">
+      <h3>Dünya çapında 10 milyon kullanıcı</h3>
+      <p>2018’den beri 237 ülkedeki insanların ele geçirilen verilerini korumalarına yardım ediyoruz</p>
+    </section>
+    <section id="sectin6">
+      <h3>Sizi nasıl koruyoruz?</h3>
+      <p>Gizliliğiniz bizce vazgeçilmez bir hak. Bu yüzden veri ihlali izleme korumamız her zaman ücretsiz.</p>
+      <ul>
+        <li>Bilinen veri ihlallerinde yer alıp almadığınızı kontrol edeceğiz</li>
+        <li>İhlalleri çözmeniz için gereken adımlarda size rehberlik edeceğiz</li>
+        <li>Yeni ihlalleri sürekli olarak izleyip size uyarı göndereceğiz</li>
+        <button>İhlal uyarılarına kaydolun</button>
+      </ul>
+    </section>
+    <section id="section7">
+      <h4>Sıkça sorulan sorular</h4>
+      <a href="">Tüm SSS’lere bakın</a>
+      <p>Veri ihlali tam olarak nedir?</p>
+      <p>Bilgilerimin ele geçirildiğini öğrendim. Ne yapmalıyım?</p>
+      <p>Veri ihlallerinde hangi bilgiler açığa çıkar?</p>
+    </section>
+    <section id="section8">
+      <div>
+        <h4>Verilerinizin kontrolünü geri alın</h4>
+        <form action=""><input type="email" placeholder="kullanici@example.com"></form>
+        <button>Ücretsiz taranayı başlat</button>
+      </div>
+    </section>
+    <footer>
+      <img src="" alt="">
+      <div>
+        <a href="">En Son Veri İhlalleri</a>
+        <a href="">SSS</a>
+        <a href="">Kullanım Koşulları</a>
+        <a href="">Gizlilik Bildirimi</a>
+        <a href="">GitHub</a>
+      </div>
+    </footer>
   </body>
 </html>
